[project]
name = "advance-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "firecrawl-py>=2.16.3",
    "langchain-google-genai>=2.1.8",
    "langgraph>=0.6.1",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
]
